fix(linktext): add overflow to style

--- a/components/CardContact/CardContact.module.css
+++ b/components/CardContact/CardContact.module.css
@@ -4,8 +4,10 @@
   color: black;
   display: flex;
   align-items: center; 
+  overflow: hidden;
 }
 
 .text__link {
   margin-left: 0.5rem;
+  width: 300px;
 }
