--- a/components/ContactList/ContactList.module.css
+++ b/components/ContactList/ContactList.module.css
@@ -1,14 +1,18 @@
 .container {
-  width: 100%;
-  height: 4rem;
-  display: flex;
-  justify-content: left;
-  align-items: center;
+  width: 90vw;
   border: 2px solid grey;
   border-radius: 1rem;
   margin: 0.5rem;
   margin-bottom: 2rem;
   text-decoration: none;
+  overflow: hidden;
+}
+
+.container__link {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+
 }
 
 .contact__icon {
@@ -20,4 +24,5 @@
 
 .text__link {
   color: black;
+  max-width: 350px;
 }
